focus css, and comb

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -7,15 +7,13 @@ html {
 }
 
 body {
+  transition-duration: 0.2s;
+  transition-property: background-color, color;
+
   color: var(--color-text);
-
-  font-size: 18px;
-
   background-color: var(--color-bg);
 
-  transition-duration: 0.2s;
-
-  transition-property: background-color, color;
+  font-size: 18px;
 }
 
 a {
@@ -41,12 +39,6 @@ header {
 
   padding: 1em var(--horizontal-pad);
 
-  background: radial-gradient(
-    circle at 50% -200%,
-    var(--color-bg-light) -7%,
-    transparent 50%
-  );
-
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
   border-left-width: 0;
@@ -64,6 +56,11 @@ header {
     transparent 76%
   );
   border-image-slice: 1;
+  background: radial-gradient(
+    circle at 50% -200%,
+    var(--color-bg-light) -7%,
+    transparent 50%
+  );
 }
 
 .identity {
@@ -113,13 +110,13 @@ header {
   min-width: 100%;
   padding: 0;
 
-  font-size: 80%;
-
   list-style: none;
-  background-color: var(--color-bg-dark);
 
   border: 1px solid var(--color-bg-light);
+  background-color: var(--color-bg-dark);
   box-shadow: 0 0 2px var(--color-black);
+
+  font-size: 80%;
 
   .identity-menu-item {
     padding: 0.5em 1em;
@@ -136,13 +133,12 @@ header {
       width: 10px;
       height: 10px;
 
-      background-color: inherit;
+      content: '';
+      transform: rotate(135deg);
 
       border: inherit;
       border-radius: 0 0 0 0.25em;
-      transform: rotate(135deg);
-
-      content: '';
+      background-color: inherit;
 
       clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     }
@@ -177,8 +173,9 @@ nav {
     }
 
     &:last-child {
-      font-weight: bold;
       text-decoration: none;
+
+      font-weight: bold;
     }
   }
 }
@@ -205,6 +202,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   margin: 0.5rem 0 0 0;
   padding: 1rem;
 
@@ -222,15 +220,14 @@ nav {
 // loading ellipsis
 .loading-ellipsis::after {
   display: inline-block;
-
-  width: 0;
   overflow: hidden;
 
-  vertical-align: bottom;
-  /* ellipsis character */
-  animation: ellipsis steps(4, end) 900ms infinite;
+  width: 0;
 
   content: '\2026';
+  /* ellipsis character */
+  animation: ellipsis steps(4, end) 900ms infinite;
+  vertical-align: bottom;
 }
 
 .util {
@@ -245,8 +242,8 @@ nav {
 
 .org-header {
   display: flex;
-  flex: 1;
   align-items: center;
+  flex: 1;
 }
 
 .repo-count {
@@ -286,11 +283,11 @@ nav {
   width: 40px;
   height: 40px;
 
+  animation: spin 3s linear infinite;
+
   border: 2px solid var(--color-text);
   border-top: 2px solid var(--color-bg);
   border-radius: 50%;
-
-  animation: spin 3s linear infinite;
 }
 
 .small-loader {
@@ -303,25 +300,25 @@ nav {
   width: 20px;
   height: 20px;
 
+  animation: spin 3s linear infinite;
+
   border: 2px solid var(--color-offwhite);
   border-top: 2px solid var(--color-bg);
   border-radius: 50%;
-
-  animation: spin 3s linear infinite;
 }
 
 .small-loader .-label {
   margin-left: 0.8em;
 
-  font-weight: 300;
-
   font-size: 14px;
+  font-weight: 300;
 }
 
 .build-container {
+  overflow: hidden;
+
   width: 100%;
   margin: 12px 0;
-  overflow: hidden;
 }
 
 .build {
@@ -331,12 +328,12 @@ nav {
   flex-direction: row;
   justify-content: space-between;
 
-  font-weight: 300;
-  font-size: 18px;
-
   border: 2px solid var(--color-bg-dark);
   border-right: 0;
   border-left: 0;
+
+  font-size: 18px;
+  font-weight: 300;
 }
 
 .build .status {
@@ -551,8 +548,8 @@ nav {
 
 .build-history {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
 }
 
 .recent-build {
@@ -560,6 +557,7 @@ nav {
 
   display: flex;
   /* stop container from blocking child links */
+
   pointer-events: none;
 }
 
@@ -572,17 +570,15 @@ nav {
 }
 
 .recent-build-link.-current {
-  transform: translateX(5px);
-
   transition: transform 0.1s;
+  transform: translateX(5px);
 
   will-change: transform;
 }
 
 .recent-build-link.-older {
-  transform: translateX(10px);
-
   transition: transform 0.1s;
+  transform: translateX(10px);
 
   will-change: transform;
 }
@@ -614,46 +610,43 @@ nav {
 
 .recent-build-tooltip {
   position: absolute;
+  z-index: 9999;
   top: calc(100% + 10px);
 
-  z-index: 9999;
-
   display: flex;
+  visibility: hidden;
   flex-direction: column;
 
   width: 300px;
   padding: 0.2em 0;
 
-  color: var(--color-text);
-
-  font-weight: 300;
-
   text-align: center;
 
-  background-color: var(--color-bg-dark);
+  color: var(--color-text);
   border: solid 1px var(--color-bg-light);
   border-radius: 3px;
-  visibility: hidden;
+  background-color: var(--color-bg-dark);
+
+  font-weight: 300;
 }
 
 .recent-build:hover .recent-build-tooltip,
-.recent-build:focus .recent-build-tooltip {
+.recent-build-link:focus + .recent-build-tooltip {
   visibility: visible;
 }
 
 .recent-build:hover .recent-build-tooltip::after,
-.recent-build:focus .recent-build-tooltip::after {
+.recent-build-link:focus .recent-build-tooltip::after {
   position: absolute;
   bottom: 100%;
 
   margin-left: 0.5em;
 
-  border-color: transparent transparent var(--color-bg-light) transparent;
-  border-style: solid;
+  content: ' ';
 
   border-width: 5px;
-
-  content: ' ';
+  border-style: solid;
+  border-color: transparent transparent var(--color-bg-light) transparent;
 }
 
 .recent-build-tooltip .line {
@@ -775,13 +768,14 @@ nav {
 }
 
 .logs {
-  font-weight: 300;
   font-size: 14px;
+  font-weight: 300;
 }
 
 .logs .line {
   display: flex;
   align-items: flex-start;
+
   margin: 0 0.5em;
 }
 
@@ -792,6 +786,7 @@ nav {
 
   > code {
     flex: 1;
+
     margin-left: 1em;
   }
 }
@@ -800,11 +795,11 @@ nav {
   padding: 0 1em;
 
   color: var(--color-primary);
-  font-size: 14px;
-  font-family: var(--font-code);
-
-  background: none;
   border: none;
+  background: none;
+
+  font-family: var(--font-code);
+  font-size: 14px;
 }
 
 .logs .wrapper.-focus {
@@ -814,11 +809,11 @@ nav {
 .logs .line .-line-num {
   display: flex;
 
+  user-select: none;
+
   color: var(--color-primary);
 
   font-family: var(--font-code);
-
-  user-select: none;
 }
 
 .line a {
@@ -838,6 +833,7 @@ nav {
   margin-left: 1.5em;
 
   color: var(--color-red-light);
+
   font-size: 14px;
 }
 
@@ -890,8 +886,8 @@ nav {
 .alert-item-attributes {
   max-height: 100px;
   margin: 1em 1em 0 1em;
-
   // stylelint-disable-next-line
+
   transition: max-height 1.2s, margin-top 1.2s;
 }
 
@@ -899,16 +895,15 @@ nav {
   width: 500px;
   padding: 1em;
 
+  cursor: pointer;
+
   color: var(--color-text);
-
-  font-size: 14px;
-
-  background-color: var(--color-bg-dark);
   border-radius: 5px;
   border-radius: 0;
+  background-color: var(--color-bg-dark);
   box-shadow: 0 5px 5px -5px hsla(0, 0%, 0%, 0.5);
 
-  cursor: pointer;
+  font-size: 14px;
 }
 
 .alert-container .-title {
@@ -919,13 +914,13 @@ nav {
 
 .alert-container .-message {
   display: flex;
+  overflow-y: auto;
   flex-direction: row;
   justify-content: space-between;
 
   max-height: 3.25em;
   margin-top: 0.25em;
   margin-bottom: 0;
-  overflow-y: auto;
 
   font-size: 0.9em;
 }
@@ -947,9 +942,9 @@ nav {
   margin: 1rem 0;
   padding-bottom: 0.5rem;
 
-  font-size: 1rem;
-
   background: var(--color-bg-dark);
+
+  font-size: 1rem;
 }
 
 .hooks .loading {
@@ -961,14 +956,14 @@ nav {
 
 .hooks .row.preview {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
 }
 
 .hooks .headers {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
 
   margin-top: 0.3em;
   padding: 0.3em 1rem;
@@ -979,9 +974,9 @@ nav {
 .hooks .header {
   flex: 1;
 
-  font-size: 1.2rem;
-
   text-align: center;
+
+  font-size: 1.2rem;
 }
 
 .hook-status {
@@ -997,13 +992,13 @@ nav {
 }
 
 .hooks .row .cell {
-  flex: 1;
   align-items: center;
+  flex: 1;
   justify-content: center;
 
-  font-weight: 300;
-
   text-align: center;
+
+  font-weight: 300;
 }
 
 .hooks .source-id {
@@ -1026,6 +1021,7 @@ nav {
 
 .hooks .text {
   flex: 1;
+
   padding: 3px 12px;
 
   text-align: center;
@@ -1053,10 +1049,10 @@ nav {
   width: 100%;
   padding: 0.4em 1em;
 
-  font-size: 14px;
-
   border-bottom: 1px solid var(--color-bg-light);
   border-left: 2px solid var(--color-bg-light);
+
+  font-size: 14px;
 }
 
 .hooks .info:last-child {
@@ -1173,7 +1169,7 @@ nav {
 .notice {
   padding: 1rem;
 
-  font-size: 1rem;
-
   background: var(--color-bg-light);
+
+  font-size: 1rem;
 }
