--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1166,11 +1166,57 @@ nav {
   background: var(--color-bg-light);
 }
 
-.cli-help {
+.contextual-help {
   position: relative;
 }
 
-.cli-help .-tooltip {
+.contextual-help-tooltip .-header {
+  margin: 0px 0px 0px 8px;
+}
+
+.contextual-help-tooltip .-command {
+  background: var(--color-focus);
+  padding: 4px 8px;
+  margin: 0px 4px;
+}
+
+.contextual-help .contextual-help-tooltip .-arrow {
+  top: calc((.5rem + 1px) * -1);
+}
+.contextual-help .contextual-help-tooltip .-arrow {
+  position: absolute;
+  display: block;
+  width: 1rem;
+  height: .5rem;
+  margin: 0 .3rem;
+  right: 0;
+}
+
+.contextual-help .contextual-help-tooltip .-arrow::after,
+.contextual-help .contextual-help-tooltip .-arrow::before {
+  border-width: 0 .5rem .5rem .5rem;
+}
+
+.contextual-help .contextual-help-tooltip .-arrow::after,
+.contextual-help .contextual-help-tooltip .-arrow::before {
+  position: absolute;
+  display: block;
+  content: "";
+  border-color: transparent;
+  border-style: solid;
+}
+
+.contextual-help-tooltip .-arrow::before {
+  top: 0;
+  border-bottom-color: rgba(0,0,0,.25);
+}
+
+.contextual-help .contextual-help-tooltip .-arrow::after {
+  top: 1px;
+  border-bottom-color: var(--color-bg-light);
+}
+
+.contextual-help .contextual-help-tooltip {
   background: var(--color-bg-dark);
   border: solid var(--line-width) var(--color-bg-light);
   position: absolute;
@@ -1180,44 +1226,4 @@ nav {
   right:0;
   width: 800px;
   padding: 8px 4px;
-}
-
-.cli-help .-header {
-  margin: 0px 0px 0px 8px;
-}
-
-.cli-help .-command {
-  background: var(--color-focus);
-  padding: 4px 8px;
-  margin: 0px 4px;
-}
-
-.cli-help .-arrow {
-  top: calc((.5rem + 1px) * -1);
-}
-.cli-help .-arrow {
-  position: absolute;
-  display: block;
-  width: 1rem;
-  height: .5rem;
-  margin: 0 .3rem;
-  right: 0;
-}
-.cli-help .-tooltip .-arrow::before {
-  top: 0;
-  border-bottom-color: rgba(0,0,0,.25);
-}
-.cli-help .-tooltip .-arrow::after {
-  top: 1px;
-  border-bottom-color: var(--color-bg-light);
-}
-.cli-help .-arrow::after, .cli-help .-arrow::before {
-  border-width: 0 .5rem .5rem .5rem;
-}
-.cli-help .-arrow::after, .cli-help .-arrow::before {
-  position: absolute;
-  display: block;
-  content: "";
-  border-color: transparent;
-  border-style: solid;
 }
