--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -553,6 +553,11 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  &.-no-pad {
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .recent-build {
