--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -555,8 +555,8 @@ nav {
   align-items: center;
 
   &.-no-pad {
-    padding: 0;
     margin: 0;
+    padding: 0;
   }
 }
 
@@ -569,8 +569,8 @@ nav {
 }
 
 .recent-build-link {
-  /* 
-    maintain link functionality when 
+  /*
+    maintain link functionality when
     using pointer-events: none; on the container
   */
   pointer-events: initial;
@@ -1165,4 +1165,13 @@ nav {
   font-size: 1rem;
 
   background: var(--color-bg-light);
+}
+
+// class for basic list styling
+.list {
+  font-size: 1rem;
+
+  li {
+    margin-bottom: 1rem;
+  }
 }
