--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -647,11 +647,12 @@ nav {
 }
 
 .recent-build:hover .recent-build-tooltip {
-  z-index: 99999;
+  z-index: 10000; // one more than .recent-build-tooltip z-index
 }
 
 .recent-build:hover .recent-build-tooltip::after,
-.recent-build-link:focus .recent-build-tooltip::after {
+.recent-build-link:focus .recent-build-tooltip::after,
+.recent-build-link:focus + .recent-build-tooltip::after {
   position: absolute;
   bottom: 100%;
 
