--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1184,7 +1184,7 @@ nav {
   font-size: 0.8rem;
   font-weight: normal;
 }
-.contextual-help .docs-button {
+.contextual-help .command-link {
   // color: white;
   margin-left: 4px;
 }
@@ -1236,29 +1236,31 @@ nav {
   background: var(--color-focus);
   font-family: var(--font-code);
   border: none;
-  // padding-left: 8px;
   padding: 4px 8px;
-  // margin: 0px 4px;
-  // resize: none;
-  // width: 400px;
-  // height: 32px;
-  // overflow: hidden;
 }
+
 .pls-0 {
-  margin-left: 8px;
-  margin-bottom: 8px;
+  margin: 1rem 0.5rem 0rem 0.5rem;
 }
-.pls-1 {
-  margin-bottom: 4px;
-}
+
 .pls-2 {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
+
+
+.pls-2-3 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 0.25rem;
+}
+
 .contextual-help .contextual-help-tooltip .-arrow {
   top: calc((.5rem + 1px) * -1);
 }
+
 .contextual-help .contextual-help-tooltip .-arrow {
   position: absolute;
   display: block;
@@ -1292,11 +1294,10 @@ nav {
   border-bottom-color: var(--color-bg-light);
 }
 
-
-
 .contextual-help.details .summary {
   overflow: initial;
 }
+
 .contextual-help.details[open] .summary + *:first-of-type {
   margin-top: 0.25rem;
 }
@@ -1304,10 +1305,10 @@ nav {
 .contextual-help-tooltip .footer {
   display: flex;
   justify-content: flex-end;
-  margin-right: 8px;
-  margin-top: 8px;
+  margin: 2rem 0.5rem 0.25rem 1rem;
+
   > a {
-    margin-left: 6px;
+    margin-left: 1rem;
   }
 }
 
@@ -1322,6 +1323,7 @@ nav {
     margin-left: 6px;
   }
 }
+
 // class for basic list styling
 .list {
   font-size: 1rem;
