--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1233,7 +1233,7 @@ nav {
   margin-top: 0.25rem;
 }
 
-.help .footer {
+.help-footer {
   display: flex;
   justify-content: flex-end;
   margin: 2rem 0.5rem 0.25rem 1rem;
@@ -1243,7 +1243,7 @@ nav {
   }
 }
 
-.help .footer div {
+.help-footer div {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
