feat(help): contextual CLI/docs help for page resources (#106)
* universal clipboard implementation with javascript

* copy button helper

* in progress

* implementing fixes

* redesigned using details/summary

* working solution with mousedown listener. needs cleanup.

* removing unneeded elements

* refactored onMouseDown handlers

* add click handler to svg inner elements

* help content fill and cleanup/refactor

* lint

* css refactor and cleanup

* cypress tests

* css lint

* lint

* expanding lint disable to 2 lines to accomdate linter linting the lint disable

* lint PLS

* gacp restart

* noIssue helper

* validate cmd

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -221,6 +221,11 @@
   }
 }
 
+// button with white color
+.button.-icon.-white {
+  color: var(--color-white);
+}
+
 // deal with button groupings
 .buttons .button:not(:last-child) {
   margin-right: 0.5rem;
