--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1301,3 +1301,32 @@ nav {
     margin-bottom: 1rem;
   }
 }
+
+// build filters
+.build-filters {
+  justify-content: flex-start;
+  margin: 1rem 0;
+  padding: 1rem;
+
+  font-size: 1rem;
+
+  background-color: var(--color-bg-dark);
+
+  .form-control {
+    margin-left: 1rem;
+  }
+
+  // TODO: revisit the following
+  .form-control .form-label::before,
+  .form-control .form-label::after {
+    top: auto;
+  }
+
+  @media only screen and (max-width: 40em) {
+    flex-flow: wrap column;
+
+    .form-control {
+      margin: 0.5rem 1rem;
+    }
+  }
+}
