--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -26,14 +26,20 @@
   }
 }
 
-// for the enable admin section
-.enable-container {
+// for the admin action section
+.admin-action-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   margin-top: 1em;
+
+  button {
+    min-width: 6rem;
+  }
 }
 
-.enable-description {
+.admin-action-description {
   display: flex;
   flex-direction: column;
   margin-right: 0.8em;
