--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1175,56 +1175,51 @@ nav {
   position: relative;
 }
 
-.help .toolip {
+.tooltip {
   position: absolute;
-  top: calc((100% + 0.5rem));
+  top: 1.8rem;
   right: 0;
   z-index: 999999;
 
   min-width: 400px;
-  padding: 8px 12px;
+  padding: 1rem;
 
   font-weight: normal;
   font-size: 0.8rem;
 
   background: var(--color-bg-dark);
   border: solid var(--line-width) var(--color-bg-light);
+
+  // triangle tip
+  &::after {
+    display: block;
+    position: absolute;
+    content: '';
+    top: -0.5rem;
+    right: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 0 0.5rem 0.5rem 0.5rem;
+    border-bottom-color: var(--color-bg-light);
+  }
 }
 
-.help .toolip .arrow {
-  position: absolute;
-  top: calc((0.5rem + 1px) * -1);
-  right: 0;
-
-  display: block;
-  width: 1rem;
-  height: 0.5rem;
-  margin: 0;
+.cmd {
+  display: flex;
+  justify-content: space-between;
 }
 
-.help .toolip .arrow::after,
-.help .toolip .arrow::before {
-  position: absolute;
+.cmd-text {
+  border: none;
+  padding: 0.5rem;
+  margin: 0.2rem 0;
+  color: var(--color-text);
+  background-color: var(--color-bg);
+  flex: 1;
 
-  display: block;
-
-  border-color: transparent;
-  border-style: solid;
-  border-width: 0 0.5rem 0.5rem 0.5rem;
-
-  content: '';
-}
-
-.toolip .arrow::before {
-  top: 0;
-
-  border-bottom-color: rgba(0, 0, 0, 0.25);
-}
-
-.help .toolip .arrow::after {
-  top: 1px;
-
-  border-bottom-color: var(--color-bg-light);
+  & + .button {
+    margin-left: 0.5rem;
+  }
 }
 
 .help.details .summary {
@@ -1240,7 +1235,7 @@ nav {
 .help-footer {
   display: flex;
   justify-content: flex-end;
-  margin: 2rem 0.5rem 0.25rem 1rem;
+  margin: 1rem 0.5rem 0 1rem;
 
   > a {
     margin-left: 1rem;
@@ -1259,38 +1254,6 @@ nav {
 
     text-align: right;
   }
-}
-
-.help .-cmd-pad {
-  margin: 0.6rem 0.5rem 0 0.5rem;
-}
-
-.-center-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.help .-m-top {
-  margin-top: 0.25rem;
-}
-
-.help .cmd {
-  padding: 4px 8px;
-
-  color: var(--color-offwhite);
-  font-family: var(--font-code);
-
-  background: var(--color-focus);
-  border: none;
-}
-
-.help .cmd-link {
-  margin-left: 0.4rem;
-}
-
-.help .copy-button {
-  margin-left: 0.6rem;
 }
 
 .copy-display {
