--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -772,7 +772,6 @@ nav {
   display: flex;
   flex: 1;
   flex-direction: row;
-  padding-bottom: 0.1rem;
 
   > code {
     flex: 1;
@@ -780,29 +779,29 @@ nav {
   }
 }
 
-.line-number {
-  padding: 0;
-  position: relative;
+.focus-log {
+  padding: 0 1em;
+
   color: var(--color-primary);
   font-size: 14px;
   font-family: var(--font-code);
 
   background: none;
   border: none;
-
-  width: 8ch;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  > span {
-    position: absolute;
-    top: 0.2rem;
-    right: 0.1rem;
-  }
 }
 
 .logs .wrapper.-focus {
   background: var(--color-focus);
+}
+
+.logs .line .-line-num {
+  display: flex;
+
+  color: var(--color-primary);
+
+  font-family: var(--font-code);
+
+  user-select: none;
 }
 
 .line a {
