--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -41,7 +41,11 @@ header {
 
   padding: 1em var(--horizontal-pad);
 
-  background: radial-gradient(circle at 50% -200%, var(--color-bg-light) -7%, transparent 50%);
+  background: radial-gradient(
+    circle at 50% -200%,
+    var(--color-bg-light) -7%,
+    transparent 50%
+  );
 
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
@@ -138,7 +142,7 @@ header {
       border-radius: 0 0 0 0.25em;
       transform: rotate(135deg);
 
-      content: "";
+      content: '';
 
       clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     }
@@ -226,7 +230,7 @@ nav {
   /* ellipsis character */
   animation: ellipsis steps(4, end) 900ms infinite;
 
-  content: "\2026";
+  content: '\2026';
 }
 
 .util {
@@ -251,13 +255,13 @@ nav {
   &::before {
     margin-right: 0.3em;
 
-    content: "[";
+    content: '[';
   }
 
   &::after {
     margin-left: 0.3em;
 
-    content: "]";
+    content: ']';
   }
 }
 
@@ -480,11 +484,13 @@ nav {
 }
 
 .build-animation.-bottom.-running {
-  animation: build-status-parallax-running 26s linear 26s infinite, build-status-parallax-start 26s linear none;
+  animation: build-status-parallax-running 26s linear 26s infinite,
+    build-status-parallax-start 26s linear none;
 }
 
 .build-animation.-top.-running {
-  animation: build-status-parallax-running 22s linear 22s infinite, build-status-parallax-start 22s linear none;
+  animation: build-status-parallax-running 22s linear 22s infinite,
+    build-status-parallax-start 22s linear none;
 }
 
 .build-animation.-bottom.-start {
@@ -652,7 +658,7 @@ nav {
 
   border-width: 5px;
 
-  content: " ";
+  content: ' ';
 }
 
 .recent-build-tooltip .line {
@@ -665,7 +671,7 @@ nav {
   margin-right: 0.5em;
 
   &:before {
-    content: "#";
+    content: '#';
   }
 }
 
@@ -716,7 +722,7 @@ nav {
   position: relative;
   overflow: hidden;
   min-height: 500px;
-  
+
   .details {
     margin-bottom: 0;
   }
@@ -1231,7 +1237,7 @@ nav {
   &::after {
     display: block;
     position: absolute;
-    content: "";
+    content: '';
     top: -0.5rem;
     right: 0;
     border-color: transparent;
